@@ -32,21 +32,33 @@ val webdrivermanagerVersion = "6.1.0"
 val junitJupiterVersion = "5.9.1"
 
 dependencies {
+	// Implementation
 	implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
 	implementation("org.springframework.boot:spring-boot-starter-web")
+
+	// Compile only
 	compileOnly("org.projectlombok:lombok")
+
+	// Development only
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
+
+	// Annotation processors
 	annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 	annotationProcessor("org.projectlombok:lombok")
+
+	// Test implementation
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
-	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 	testImplementation("org.seleniumhq.selenium:selenium-java:${seleniumJavaVersion}")
 	testImplementation("io.github.bonigarcia:selenium-jupiter:${seleniumJupiterVersion}")
 	testImplementation("io.github.bonigarcia:webdrivermanager:${webdrivermanagerVersion}")
 	testImplementation("org.junit.jupiter:junit-jupiter:${junitJupiterVersion}")
+
+	// Test runtime only
+	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.test {
+	jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
 	filter {
 		excludeTestsMatching("*FunctionalTest")
 	}
